MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/Sales_Executive_Meeting__c.object-meta.xml
<CustomObject>
    <description>This object is used by the Sales Team to log their meeting details with the customers and brokers.</description>
    <label>Sales Executive Meeting</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Executive Meetings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>