MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Broker Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Executive Meetings</relationshipLabel>
    <relationshipName>Sales_Executive_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>