MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/fields/Broker_Category__c.field-meta.xml
<CustomField>
    <fullName>Broker_Category__c</fullName>
    <label>Broker Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>