MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/fields/Broker_Location__c.field-meta.xml
<CustomField>
    <fullName>Broker_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Location</label>
    <type>TextArea</type>
</CustomField>