MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/fields/Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>