MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>This field is used to capture the end date and time of the meeting.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date Time</label>
    <type>DateTime</type>
</CustomField>