MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/fields/Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Follow up Date</label>
    <type>Date</type>
</CustomField>