MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/fields/Includes_Presentation__c.field-meta.xml
<CustomField>
    <fullName>Includes_Presentation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used as a flag to know if a presentation is attached with the meeting.</description>
    <label>Includes Presentation</label>
    <type>Checkbox</type>
</CustomField>