MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/fields/Meeting_Location__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Location__c</fullName>
    <description>This field is used to capture the location where the meeting was held</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Location</label>
    <type>TextArea</type>
</CustomField>