MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <description>This field is used to capture the meeting notes.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Meeting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>