MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.OwnerId</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Executive Meetings</relationshipLabel>
    <relationshipName>Sales_Executive_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>