MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/fields/Presentation_Files_Count__c.field-meta.xml
<CustomField>
    <fullName>Presentation_Files_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>A hidden system field used to count the number of valid presentation files attached to this record.</description>
    <label>Presentation Files Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>