MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Sales Executive Meetings</relationshipLabel>
    <relationshipName>Sales_Executive_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>