MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <description>This field is used to capture the start date and time of the meeting.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date Time</label>
    <type>DateTime</type>
</CustomField>