MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/recordTypes/Broker.recordType-meta.xml
<RecordType>
    <fullName>Broker</fullName>
    <active>true</active>
    <label>Broker</label>
</RecordType>