MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <label>Customer</label>
</RecordType>