MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/validationRules/Broker_Requires_Broker_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Broker_Requires_Broker_Category</fullName>
    <active>true</active>
    <description>Enforces that the Broker Category field is mandatory for Broker meetings.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Broker&apos;, ISBLANK(TEXT(Broker_Category__c)))</errorConditionFormula>
    <errorDisplayField>Broker_Category__c</errorDisplayField>
    <errorMessage>Broker Category is mandatory for Broker meetings.</errorMessage>
</ValidationRule>