MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/validationRules/Enforce_Presentation_Attachment.validationRule-meta.xml
<ValidationRule>
    <fullName>Enforce_Presentation_Attachment</fullName>
    <active>true</active>
    <description>Enforces that a presentation file is attached when the Includes Presentation checkbox is checked.</description>
    <errorConditionFormula>AND(Includes_Presentation__c = true, BLANKVALUE(Presentation_Files_Count__c, 0) &lt;= 0)</errorConditionFormula>
    <errorMessage>Please attach the presentation first.</errorMessage>
</ValidationRule>