MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/validationRules/Existing_Broker_Requires_Broker.validationRule-meta.xml
<ValidationRule>
    <fullName>Existing_Broker_Requires_Broker</fullName>
    <active>true</active>
    <description>Enforces that the Broker lookup field is mandatory when the Broker Category is Existing.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Broker&apos;, ISPICKVAL(Broker_Category__c, &apos;Existing&apos;), ISBLANK(Broker__c))</errorConditionFormula>
    <errorDisplayField>Broker__c</errorDisplayField>
    <errorMessage>Broker is mandatory when the Broker Category is Existing.</errorMessage>
</ValidationRule>