MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/validationRules/New_Broker_Requires_Name_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Broker_Requires_Name_Location</fullName>
    <active>true</active>
    <description>Enforces that the Broker Name and Broker Location are mandatory when the Broker Category is New.</description>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &apos;Broker&apos;,
    ISPICKVAL(Broker_Category__c, &apos;New&apos;),
    OR(
        ISBLANK(Broker_Name__c),
        ISBLANK(Broker_Location__c)
    )
)</errorConditionFormula>
    <errorMessage>Broker Name and Broker Location are mandatory when the Broker Category is New.</errorMessage>
</ValidationRule>