MODON MRE BPDEV/force-app/main/default/objects/Sales_Executive_Meeting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date_Time__c</columns>
    <columns>End_Date_Time__c</columns>
    <columns>Includes_Presentation__c</columns>
    <columns>Meeting_Location__c</columns>
    <columns>Meeting_Notes__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>